feat: login with phone number (#7)
* feat: login with phone number

* feat: add phone_number to user seeder

* chore: add validator for phone number

* feat: add phone number validation

* update swagger on auth

* feat: add auth prefix back and improve doc

* build: ignore models dir for jest

---------
